# confman-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  config.rs  lib.rs  main.rs  serde_utils.rs  utils.rs
src/commands/: mod.rs  reset.rs  version.rs
src/module/: entry.rs  mod.rs  source.rs
