[package]
name = "confman"
version = "0.1.0"
edition = "2021"
description = "A cross-platform, modular configuration manager"
authors = ["bwpge <bwpge.dev@gmail.com>"]
license = "MIT"
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "confman"

[[bin]]
name = "confman"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "git2"] }

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = [
  "cargo",
  "derive",
  "env",
  "wrap_help",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.56"
url = { version = "2.5.0", features = ["serde"] }
